# aws-iot-device-sdk-rust

./: .gitignore  Cargo.toml  README.md
examples/: .pubsub.rs.swp  pubsub.rs  pubsub_async.rs  pubsub_sync.rs
src/: async_client.rs  client.rs  error.rs  lib.rs  main_pubsub.rs  main_shadow.rs  settings.rs  shadow.rs  sync_client.rs
