[package]
name = "aws-iot-device-sdk-rust"
description = "An easy to use SDK for connecting to AWS IoT Core."
documentation = "https://docs.rs/aws-iot-device-sdk-rust"
repository = "https://github.com/arnstein/aws-iot-device-sdk-rust"
license = "MIT"
version = "0.2.1"
authors = ["Arnstein Kleven <arnsteinkleven@gmail.com>"]
edition = "2021"

include = [
    "src/lib.rs",
    "src/client.rs",
    "src/error.rs",
    "Cargo.toml",
    "README.md"
    ]


[features]
default = ["async"]
async = ["dep:tokio"]
sync = ["dep:bus"]

[dependencies]
rumqttc = "0.15.0"
serde_json = "1.0"
mqtt4bytes = "0.1.6"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "sync", "macros", "net", "time", "fs"], optional = true }
bus = { version = "2.4.0", optional = true }

[[example]]
name = "pubsub_sync"
required-features = ["sync"]

[[example]]
name = "pubsub"
required-features = ["async"]