[package]
name = "aws-iot-device-sdk-rust"
description = "An easy to use SDK for connecting to AWS IoT Core."
documentation = "https://docs.rs/aws-iot-device-sdk-rust"
repository = "https://github.com/arnstein/aws-iot-device-sdk-rust"
license = "MIT"
version = "0.6.0"
authors = ["Arnstein Kleven <arnsteinkleven@gmail.com>"]
edition = "2021"

include = [
    "src/lib.rs",
    "src/async_client.rs",
    "src/sync_client.rs",
    "src/settings.rs",
    "src/error.rs",
    "Cargo.toml",
    "README.md"
    ]


[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "fs"], optional = true }
bus = { version = "2.4.0", optional = true }

[features]
default = ["async"]
async = ["dep:tokio"]
sync = ["dep:bus"]
